# inter_iit_uav_guided_ugv

./: .gitignore  README.md  mav.parm  mav.tlog  mav.tlog.raw
detector_msgs/: CMakeLists.txt  package.xml
detector_msgs/msg/: Centre.msg  Corners.msg
explorer/: CMakeLists.txt  package.xml
explorer/include/explorer/: explorer.hpp
explorer/launch/: default.launch  explorer_node.launch  mav.parm  mav.tlog  mav.tlog.raw
explorer/src/: explorer.cpp  explorer_node.cpp
interiit22/: package.xml
interiit22/launch/: drdo_world1.launch  drdo_world2.launch  drdo_world3.launch  mavros_node.launch  world.launch
interiit22/models/gimbal_small_2d/: model.sdf
interiit22/models/world1_mesh/: model.config  model.sdf
interiit22/models/world2_mesh/: model.config  model.sdf
interiit22/world/: drdo_world1.world  drdo_world2.world
maps/: world.csv  world1_1.csv  world2_1.csv
offboard/: CMakeLists.txt  package.xml
offboard/include/offboard/: offboard.hpp
offboard/launch/: default.launch  offboard_node.launch
offboard/scripts/: sim_vehicle.sh
offboard/src/: offboard.cpp  offboard_node.cpp
prius_controller/launch/: demo.launch
prius_controller/scripts/: PID_velocity_controller_ROS.py  path_publisher.py  pure_pursuit_ros.py  straight_path.py
prius_controller/testing/: plot.py  save_odometry.py  world1.csv
prius_controller/testing/mean_path/world1/: world1.csv  world1_in.csv  world1_out.csv  world1_out13.csv
prius_controller/testing/mean_path/world2/: world2.csv  world2_in.csv  world2_out.csv
prius_controller/testing/odometry/: save_odometry.py
prius_detector/: CMakeLists.txt  package.xml
prius_detector/cfg/: params.yaml
prius_detector/include/prius_detector/: libprius_detection.hpp  prius_detector.hpp  prius_localization.hpp
prius_detector/launch/: default.launch
prius_detector/src/: detection.cpp  libprius_detection.cpp  prius_detector.cpp  prius_detector_node.cpp  prius_localization.cpp
prius_detector/testing/: CMakeList.txt  CMakeLists.txt  open_cv.cpp
prius_localization/: CMakeLists.txt  package.xml
segmentation/: CMakeLists.txt  package.xml
segmentation/cfg/: params.yaml
segmentation/include/segmentation/: mapping_fsm.hpp  road_seg.hpp
segmentation/launch/: default.launch
segmentation/msg/: drone_way.msg
segmentation/rviz/: vis_config.rviz
segmentation/src/: mapping_fsm.cpp  mapping_fsm_node.cpp  road_seg.cpp  road_seg_node.cpp  segmentation_node.cpp  test1.cpp
visualization/: CMakeLists.txt  package.xml
visualization/src/: visualization_node.cpp
