<?xml version="1.0"?>
<package format="2">
  <name>explorer</name>
  <version>0.0.0</version>
  <description>The explorer package</description>

  <maintainer email="user@gmail.com">16</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>

  <depend>detector_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

</package>
