<?xml version="1.0"?>
<package format="2">
  <name>offboard</name>
  <version>0.0.0</version>
  <description>The offboard package</description>

  <maintainer email="todo@todo.com">10</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

</package>
