<?xml version="1.0"?>
<package format="2">
  <name>visualization</name>
  <version>0.0.0</versin>
  <description>The visualization package</description>

  <maintainer email="todo@todo.com">10</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
